Creates endpoint for retrieving all branches related to a category
