# src/routes/Branch.Routes.js
@@ -5,5 +5,6 @@ const branchRouter = Router();
 branchRouter.get('/branches', BranchController.getAllBranches);
 branchRouter.post('/branches', BranchController.createBranch);
 branchRouter.get('/branches/search/:name', BranchController.searchBranchesByName);
+branchRouter.get('/branches/search/:categoryID', BranchController.getBranchesByCategory);
 branchRouter.get('/branches/:id', BranchController.getBranchById);
 export default branchRouter;
